--- a/BackEnd/MultiNote/MultiNote.Application/MultiNote.Application.csproj
+++ b/BackEnd/MultiNote/MultiNote.Application/MultiNote.Application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MultiNote.Core\MultiNote.Core.csproj" />
   </ItemGroup>
 
